--- a/css/accordion.css
+++ b/css/accordion.css
@@ -25,7 +25,7 @@ font-size: 0.7em;
 	margin: 15px;
 }
 
-.info{
+.statusAula{
 	margin-left:30%;
 }
 
@@ -90,4 +90,11 @@ font-size: 0.7em;
 
 .selectStatusText {
 	text-align: center;
+}
+.imagePhoto {
+	height: 40%;
+	width: 95%;
+	margin-top: 10px;
+	margin-left: 10px;
+
 }
