--- a/css/accordion.css
+++ b/css/accordion.css
@@ -125,3 +125,9 @@ font-size: 0.7em;
 .profInUfficio {
 	margin-top: 70px;
 }
+
+.infoFollowersNavigation
+{
+	/*background-color: green;*/
+	margin-left: 60%;
+}
