--- a/www/css/profile.css
+++ b/www/css/profile.css
@@ -1,3 +1,20 @@
+.icon-position{
+		margin-right:6px !important;
+	margin-left: -5px;
+    width: 33px;
+}
+
+.icon-polo{
+	 margin-left: 0;
+    margin-right: 10px !important;
+    width: 24px;
+}
+
+.margin-top{
+	 margin-top: 6px;
+	 font-weight:bold;
+}
+
 .email-icon{
 	height:24px;
 	
