--- a/www/css/accordion.css
+++ b/www/css/accordion.css
@@ -11,11 +11,17 @@
 }
 
 .menu-color{
-	background-color:#66FF99;
+	background-color:#f6f6f6;
+}
+
+#menu-title{
+	margin-left:7px;
+	font-size:1em;
 }
 
 .menu-border{
-	border-left:2px solid
+	border-left:1px solid;
+	border-color:#ddd;
 }
 
 .ui-collapsible-heading{
