--- a/www/css/profile.css
+++ b/www/css/profile.css
@@ -4,6 +4,10 @@
     width: 33px;
 }
 
+.pulito>a{
+	color:black !important;
+}
+
 .icon-polo{
 	 margin-left: 0;
     margin-right: 10px !important;
