--- a/www/css/accordion.css
+++ b/www/css/accordion.css
@@ -196,9 +196,13 @@ padding: 0 !important;
 }
 
 .notifyDiv {
-	margin-left: 18%;
+	margin-left: 0%;
 }
 .notifyImage {
+	margin-left: 10%;
+	margin-top: 10%
+}
+.notifyIcon {
 	width: 20px;
 	height: 20px;
 }
