--- a/www/css/widgets.css
+++ b/www/css/widgets.css
@@ -175,8 +175,14 @@ height: 18px;
   -moz-opacity: 0.30;
   opacity: 0.7;
 }
+
+.following-position-text{
+	padding-top: 6px;
+vertical-align: middle;
+}
 .preferiti_txt{
-	padding-top: 4px;
+	padding-top: 10px;
+vertical-align: middle;
 }
 .aule_widget_image{
 	width: 34% !important;
@@ -191,4 +197,21 @@ height: 18px;
 .aule_libere_testo{
 	margin-bottom:2px;
 }
+#remove_aule{
+	position:absolute;
+	font-size: 1.3em;
+	text-align:center;
+	 background: #000000;
+  filter: alpha(opacity=80);
+  filter: progid: DXImageTransform.Microsoft.Alpha(opacity=30);
+  -moz-opacity: 0.30;
+  opacity: 0.7;
+  z-index:800;
+ display:none;
+}
 
+.widget_remove{
+	width: 70px;
+vertical-align: middle;
+float: right;
+}
