--- a/www/css/profile.css
+++ b/www/css/profile.css
@@ -26,6 +26,7 @@
 
 .email-text{
 	font-weight:normal;
+	margin-left: 35px;
 }
 
 .title{
@@ -49,4 +50,8 @@
 
 .card .table-view{
 	
+}
+
+.sopra{
+	padding-top: 0px;
 }
