BUG FIX FOLLOWER E SEGNALA

--- a/www/css/accordion.css
+++ b/www/css/accordion.css
@@ -49,6 +49,11 @@
 }
 
 
+#titleNavigation{
+	text-align:center;
+	font-size:20px;
+margin-top: 12px;
+}
 .titleNavigation{
 	text-align:center;
 	font-size:20px;
