--- a/www/css/widgets.css
+++ b/www/css/widgets.css
@@ -121,7 +121,7 @@ margin-top: 5px;
 	padding-bottom: 13px !important;
 vertical-align: middle;
 }
-.icon-plus{
+.icon-plus-widget{
 	position: absolute;
 float: right;
 right: 15px;
