--- a/www/css/widgets.css
+++ b/www/css/widgets.css
@@ -242,7 +242,7 @@ position: absolute;
   filter: alpha(opacity=80);
   filter: progid: DXImageTransform.Microsoft.Alpha(opacity=30);
   -moz-opacity: 0.30;
-  opacity: 0.9;
+  opacity: 0.8;
   z-index:800;
  display:none;
  margin-left: -3px;
@@ -258,7 +258,7 @@ margin-top: -3px;
   filter: alpha(opacity=80);
   filter: progid: DXImageTransform.Microsoft.Alpha(opacity=30);
   -moz-opacity: 0.30;
-  opacity: 0.9;
+  opacity: 0.8;
   z-index:800;
  display:none;
  margin-left: -3px;
@@ -274,7 +274,7 @@ margin-top: -3px;
   filter: alpha(opacity=80);
   filter: progid: DXImageTransform.Microsoft.Alpha(opacity=30);
   -moz-opacity: 0.30;
-  opacity: 0.9;
+  opacity: 0.8;
   z-index:800;
  display:none;
  margin-left: -3px;
@@ -311,5 +311,5 @@ float: right;
 	padding: 5px 10px 5px 2px;
 }
 .select_widget{
-	border-color:#adebad;
+	border-color:#a6a6a6;
 }
