--- a/www/css/accordion.css
+++ b/www/css/accordion.css
@@ -6,7 +6,7 @@ margin-left: 9px;
 }
 
 .bordo_verde>a{
-	background-color:#ccffeb !important;
+	background-color:#bfbfbf !important;
 }
 
 .bordo_verde>a{
