--- a/www/css/gestione_notifiche.css
+++ b/www/css/gestione_notifiche.css
@@ -1,3 +1,9 @@
+* {
+    -webkit-tap-highlight-color: rgba(255, 255, 255, 0) !important; 
+    -webkit-focus-ring-color: rgba(255, 255, 255, 0) !important; 
+    outline: none !important;
+} 
+
 .btn_accetta{
 background-color: #efefef;
 	
@@ -70,4 +76,8 @@ background-color: #efefef;
 	padding-bottom: 0px;
 	padding-left: 1px;
 	padding-right: 1px;
+}
+
+.stretto:hover, .stretto:active{
+background-color: #fafafa;
 }
