--- a/www/css/accordion.css
+++ b/www/css/accordion.css
@@ -1,14 +1,42 @@
-a{
-	color:#000000;
+
+ 
+ .icon_profilo_utente{
+ font-size:19px !important;
+ }
+
+.tab-item-selected{
+   border-bottom: 7px solid #19A992;	
+}
+
+.ui-mobile, .ui-mobile body {
+    height: 100%;
+}
+*{
+	text-shadow:none !important;
+}
+header>.title{
+	color:#FFFFFF;
+}
+header{
+	background-color:#1ABC9C !important;
 }
 
 
+nav{
+	border-top: 3px solid #bfbfbf;
+	background-color:#e6e6e6 !important;
+}
+
+a{
+	color:#000000 !important;
+}
+
 header>a{
-	color:#929292 !important;
+	color:#FFFFFF !important;
 }
 
 header>a:active, header>a:hover {
-	color:#000000 !important;
+	color:#929292 !important;
 }
 
 * {
@@ -27,7 +55,7 @@ margin-left: 9px;
 }
 
 .bordo_verde>a{
-	background-color:#bfbfbf !important;
+	background-color:#d7f4ef !important;
 }
 
 .bordo_verde>a{
@@ -47,48 +75,88 @@ margin-left: 9px;
     margin-right: 9px;
 }
 
+.icon-home{
+	  color:#568E86;
+	  font-size: 30px !important;
+	  
+}
+
 .menu-border>ul{
 	margin-top:0px !important;
 }
 
 .menu-color>li{
+	color:#FFFFFF;
 	padding: 10px 65px 10px 15px !important;
+border-bottom: 1px solid #2F4052;
+}
 
+.text-white{
+	color:#FFFFFF !important;
+}
+
+.menu-title{
+	text-align: center;
+	background-color: #16A085;
+   height:44px;
+}
+.menu-li{
+	border-right: 1px solid #20947E;
 }
 
 .menu-color{
-	background-color:#f6f6f6;
+	   background-color: #34495E;
+	   border-bottom: 1px solid #2F4052;
 }
+
+.menu-margin-poli{
+	margin-bottom: -7px;
+}
+
 
 #menu-title{
-	margin-left:7px;
-	font-size:1em;
+	
+	font-size: 20px !important;
+margin-left: 50%;
+font-size: 1em;
+float: left;
 }
-
-.menu-border{
-	border-left:1px solid;
-	border-color:#ddd;
+#menucanvas_index{
+margin-top: -1px;
 }
-
+#menu_index{
+	margin-left: -1px;
+}
 .ui-collapsible-heading{
 	margin: 1px;
 }
 
-.tab-item{
-	color: #929292 !important;
+.title_polo_widget{
+	font-size: 1.2em;
+	border-bottom: none;
+	font-weight:bold;
+	text-align:center;
+	padding:8px 15px 8px 15px !important;
 }
 
-.tab-item-selected{
-	 color: #3388cc !important;
+.title_widget_no_padding{
+	font-size: 1.1em;
+	border-bottom: none;
+	font-weight:bold;
+	text-align:center;
+	padding: 3px 15px 3px 15px !important;
 }
-
 
 #titleNavigation{
+	color:#FFFFFF;
+	text-shadow:none;
 	text-align:center;
 	font-size:20px;
 margin-top: 12px;
 }
 .titleNavigation{
+	color:#FFFFFF;
+	text-shadow:none;
 	text-align:center;
 	font-size:20px;
 margin-top: 12px;
@@ -102,8 +170,8 @@ margin-left: 5px;
 }
 
 .position_profile_visitato_icon{
-	width: 34px;
-margin-left: -4px;
+width: 25px;
+margin-left: 0px;
 }
 
 /* Notifica urgente */
