--- a/www/css/gestione_notifiche.css
+++ b/www/css/gestione_notifiche.css
@@ -78,12 +78,14 @@ font-size: 0.9em;
 
 
 .stretto{
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
+    -webkit-tap-highlight-color: transparent;
 	padding-top: 0px;
 	padding-bottom: 0px;
 	padding-left: 1px;
 	padding-right: 1px;
 }
 
-.stretto:hover, .stretto:active{
+.stretto:active{
 background-color: #fafafa;
 }
